[package]
name = "mrubyedge-math"
version = "0.1.2"
edition = "2024"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
description = "mruby-math provides Math module for mruby/edge"
license = "BSD-3-Clause"

[dependencies]
mrubyedge = { version = "1.1.9" }

[dev-dependencies]
mrubyedge = { version = "1.1.9", features = ["default"] }
mec-mrbc-sys = "3.3.1"
