[package]
name = "mruby-serde-json"
version = "0.1.0"
edition = "2024"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
description = "mruby-serde-json provides JSON serialization/deserialization for mruby/edge using serde_json"
license = "BSD-3-Clause"

[dependencies]
mrubyedge = ">= 1.1.0"
# mrubyedge = { version = "1.1.0", path = "../mrubyedge", default-features = false }
serde = ">= 1.0.228"
serde_json = ">= 1.0.149"

[dev-dependencies]
mrubyedge = { version = "1.1.0", features = ["default"] }
mec-mrbc-sys = "3.3.1"
