[package]
name = "mrubyedge-serde-json"
version = "0.1.0"
edition = "2024"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
description = "mruby-serde-json provides JSON serialization/deserialization for mruby/edge using serde_json"
license = "BSD-3-Clause"

[dependencies]
mrubyedge = { path = "../mrubyedge" }
serde = ">= 1.0.228"
serde_json = ">= 1.0.149"

[dev-dependencies]
mrubyedge = { path = "../mrubyedge", features = ["default"] }
mec-mrbc-sys = "3.3.1"
