[package]
name = "mrubyedge-time"
version = "0.1.1"
edition = "2024"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
description = "mruby-time provides Time class for mruby/edge"
license = "BSD-3-Clause"

[dependencies]
mrubyedge = ">= 1.1.8"
libc = "0.2"

[dev-dependencies]
mrubyedge = { version = ">= 1.1.8", features = ["default"] }
mec-mrbc-sys = "3.3.1"

[features]
default = []
# Enable std::time based Time.__source (disabled on wasm by default)
std-time = []
