[package]
name = "mrubyedge-cli"
version = "1.1.0"
edition = "2024"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
description = "mruby/edge cli endpoint - run, compile to wasm, etc."
license = "BSD-3-Clause"
include = ["**/*.rs", "Cargo.toml", "templates/*"]

[[bin]]
name = "mrbedge"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
mruby-compiler2-sys = "0.2.2"
mrubyedge = { version = "1.1.0", features = [
    "default",
    "mruby-random",
    "mruby-regexp",
] }
rand = "0.9.2"
nom = "7.1.3"
askama = "0.12.1"

[dev-dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
