[package]
name = "mrubyedge"
version = "1.0.19"
edition = "2024"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
description = "mruby/edge is yet another mruby that is specialized for running on WASM"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = { version = "1.0.7", optional = true }
getrandom = { version = "0.3.4", optional = true }
plain = "0.2.3"
regex = { version = "1.12.2", default-features = false, features = [
    "std",
], optional = true }
simple_endian = "0.3.3"

[dev-dependencies]
criterion = "0.5.1"
mec-mrbc-sys = "3.3.1"
fnv = "1.0.7"
once_cell = "1.20.2"
mruby-compiler2-sys = "0.2.2"

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "hashmap_comparison"
harness = false

[features]
default = ["wasi", "mrubyedge-debug"]
wasi = []
mruby-hash-fnv = ["dep:fnv"]
mruby-regexp = ["dep:regex"]
mrubyedge-debug = ["wasi"]
mruby-random = ["wasi", "dep:getrandom"]
no-wasi = []
